--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "version": "1.3.0",
     "description": "Google event widget for Awesome New Tab Page [ANTP]",
     "background": {
-		"scripts": [ "lib/jquery.min.js", "lib/moment.min.js", "lib/moment.lang-all.min.js", "js/shayjs.js", "js/shayjs.utils.js", "js/shayjs.antp.widget.js", "js/shayjs.google.js", "js/background.js" ]
+		"scripts": [ "lib/jquery.min.js", "lib/moment.min.js", "lib/moment.lang-all.min.js", "lib/shayjs.js", "lib/shayjs.utils.js", "lib/shayjs.antp.widget.js", "lib/shayjs.google.js", "js/background.js" ]
 	},
 	"icons": {
         "16": "images/128.png",
@@ -17,6 +17,6 @@
     "permissions": [ "tabs", "http://*.google.com/", "https://*.google.com/", "https://*.google-analytics.com/" ],
     "content_security_policy": "script-src 'self' https://*.google-analytics.com/; object-src 'self'",
     "web_accessible_resources": [
-        "widget.html"
+        "GoogleEvents.html"
     ]
 }
