--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "version": "1.3.0",
     "description": "Google event widget for Awesome New Tab Page [ANTP]",
     "background": {
-		"scripts": [ "lib/jquery.min.js", "lib/moment.min.js", "lib/moment.lang-all.min.js", "lib/shayjs.js", "lib/shayjs.utils.js", "lib/shayjs.antp.widget.js", "lib/shayjs.google.js", "js/background.js" ]
+		"scripts": [ "lib/jquery.min.js", "lib/moment.min.js", "lib/moment.lang-all.min.js", "lib/shayjs.js", "lib/shayjs.utils.js", "lib/shayjs.date.js", "lib/shayjs.antp.widget.js", "lib/shayjs.google.js", "js/background.js" ]
 	},
 	"icons": {
         "16": "images/128.png",
