--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	
+
     "name": "Google Events [ANTP]",
     "manifest_version": 2,
-    "version": "2.1.1",
+    "version": "2.2.0",
     "description": "Google event widget for Awesome New Tab Page [ANTP]",
     "background": {
 		"scripts": [ "lib/jquery.min.js", "lib/moment.min.js", "lib/moment.lang-all.min.js", "lib/shayjs.js", "lib/shayjs.date.js", "lib/shayjs.antp.js", "lib/shayjs.google.js",  "js/defaults.js", "js/background.js" ]
@@ -17,6 +17,7 @@
     "permissions": [ "tabs", "http://*.google.com/", "https://*.google.com/", "https://*.google-analytics.com/" ],
     "content_security_policy": "script-src 'self' https://*.google-analytics.com/; object-src 'self'",
     "web_accessible_resources": [
-        "GoogleEvents.html"
+        "GoogleEvents.html",
+        "options.html"
     ]
 }
